fix(list-box): add visible focus in forced colors mode

--- a/packages/components/src/menu/Menu.module.css
+++ b/packages/components/src/menu/Menu.module.css
@@ -56,6 +56,15 @@
       outline: none;
     }
 
+    &[data-focused] {
+      @media (forced-colors: active) {
+        outline: var(--midas-state-focus-contrast-mode-outline) solid;
+        outline-offset: calc(
+          var(--midas-state-focus-contrast-mode-outline) * -1
+        );
+      }
+    }
+
     &:not([data-has-submenu]) {
       padding-right: var(--midas-size-80);
     }
